--- a/index.html
+++ b/index.html
@@ -5,109 +5,288 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
     <title> Petite Suprise</title>
 </head>
 
 <body>
-    <header>
-        <div>
-            <img src="./img/logosinfondo.png" alt="Logo Petite Suprise" class="logopetite">
-            <H1>Petite <br> Suprise</H1>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=5491132940905&text=Hola%21%20Quisiera%20encargar%20un%20desayuno."
+        class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
+    <!-- --------comienzo del header--------- -->
+    <header class="navbar navbar-expand-lg">
+        <div class="container">
+            <img src="./img/logosinfondon.png" alt="Logopetitesuprise" class="logopetite">
+            <a class="navbar-brand" href="./index.html">Petite <br> Suprise</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/desayunos.html">Desayunos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/contacto.html">Contactos</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li> <a href="./pages/nosotros.html">Nosotros</a> </li>
-                <li><a href="./pages/desayunos.html">Desayunos</a></li>
-                <li><a href="./pages/preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-
     </header>
 
-    <!-- Comienzo del Main -->
+    <!------------------Comienzo del Main ----------------------------->
     <main>
         <section>
-            <div class="caja1">
-                <h2 class="caja1-1">Encarga tus <br> Desayunos a domicilio</h2>
-            </div>
-            <div class="caja2"><a href="./pages/desayunos.html">
-                    <h2>¿Que desayuno sorpresa quieres?</h2>
-                    <h3>Elige el momento y hazlo perfecto con nuestros <strong>desayunos personalizados</strong></h3>
-                </a></div>
-            <div class="desaindex">
-                <a href="./pages/desayunos.html">
-                    <div class="cajacumple">
-                        <h4>Desayunos de cumpleaños</h4>
+            <div class="container-fluid gap-30">
+                <div class="row">
+                    <div class="caja1 text-light col-12">
+                        <h2 class="caja1-1">Encarga tus <br> Desayunos a domicilio</h2>
                     </div>
-                </a>
-
-                <a href="./pages/desayunos.html">
-                    <div class="cajasaludable">
-                        <h4>Desayunos Saludables</h4>
+                    <div
+                        class="caja2 text-center p-3 bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                        <a href="./pages/desayunos.html">
+                            <h2>¿Que desayuno sorpresa quieres?</h2>
+                            <h3>Elige el momento y hazlo perfecto con nuestros <strong>desayunos personalizados</strong>
+                            </h3>
+                        </a>
                     </div>
-                </a>
-                <a href="./pages/desayunos.html">
-                    <div class="cajaromanticos">
-                        <h4>Desayunos Romanticos</h4>
-                    </div>
-                </a>
-
-                <a href="./pages/desayunos.html">
-                    <div class="cajapersonalizados">
-                        <h4>Desayunos Personalizados </h4>
-                    </div>
-                </a>
-            </div>
-            <a href="./pages/desayunos.html">
-                <div>
-                    <h4 class="vermasindex">Ver Mas</h4>
                 </div>
-            </a>
-
-            <div class="caja333">
-                <h2>Las cajas de desayuno regalo más vendidas!</h2>
-                <h3>No te pierdas nuestras cajas de desayuno mas enviadas! ¿cuál prefieres que te enviemos?</h3>
+        </section>
+        <section class="carrusel justify-content-center d-lg-none">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+                        aria-label="Slide 6"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+                        aria-label="Slide 7"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/desayunos/desayunoaniversario.jpg" class="d-block w-100" alt="Aniversarios">
+                        <div class="carousel-caption">
+                            <h5>Desayunos Aniversarios</h5>
+                            <p>Sorprende a esa persona especial en su dia.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/desayunos/desayunocumple.jpg" class="d-block w-100" alt="cumpleaños">
+                        <div class="carousel-caption">
+                            <h5>Desayunos de cumpleaños</h5>
+                            <p>El mejor regalo de cumpleaños <br>un buen desayuno.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/desayunos/desayunomadre.jpg" class="d-block w-100" alt="Mamá">
+                        <div class="carousel-caption">
+                            <h5>Para Mama</h5>
+                            <p>Que la reina comience el dia con un buen <br><strong>desayuno</strong>.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/desayunos/desayunopadre.jpg" class="d-block w-100" alt="Papá">
+                        <div class="carousel-caption">
+                            <h5>Para papa</h5>
+                            <p>Sorprende a ese heroe sin capa con <br> nuestros desayunos.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/desayunos/desayunosaludable.jpg" class="d-block w-100" alt="Saludables">
+                        <div class="carousel-caption">
+                            <h5>Desayunos Saludables</h5>
+                            <p>Empieza el dia con toda la energia que necesitas.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/desayunos/desayunopersonalizado.jpeg" class="d-block w-100"
+                            alt="Personalizados">
+                        <div class="carousel-caption">
+                            <h5>Personalizalo como quieras</h5>
+                            <p>Para cualquier ocasión con lo que mas deseas.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/desayunos/desayunomate.jpeg" class="d-block w-100 " alt="Mates">
+                        <div class="carousel-caption text-dark">
+                            <h5>Desayuna con un Mate</h5>
+                            <p>Regala un desayuno bien Argentino y personaliza el mate como quieras!.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
+        </section>
+        <section>
+            <div class="container d-none d-sm-none d-md-none d-lg-block">
+                <div class="row">
+                    <div class="desayunodesktop text-center">
+                        <div class="card" style="background-image: url(./img/desayunos/desayunoaniversario.jpg)">
+                            <div class="textocard text-light">
+                                <h3>Aniversarios</h3>
+                            </div>
+                        </div>
+                        <div class="card" style="background-image: url(./img/desayunos/desayunocumple.jpg)">
+                            <div class="textocard">
+                                <h3>cumpleaños</h3>
+                            </div>
+                        </div>
+                        <div class="card" style="background-image: url(./img/desayunos/desayunomadre.jpg)">
+                            <div class="textocard">
+                                <h3>Para MAMÁ</h3>
+                            </div>
+                        </div>
+                        <div class="card" style="background-image: url(./img/desayunos/desayunopadre.jpg)">
+                            <div class="textocard text-light">
+                                <h3>Para PAPÁ</h3>
+                            </div>
+                        </div>
+                        <div class="card" style="background-image: url(./img/desayunos/desayunosaludable.jpg)">
+                            <div class="textocard text-light">
+                                <h3>Saludables</h3>
+                            </div>
+                        </div>
+                        <div class="card" style="background-image: url(./img/desayunos/desayunopersonalizado.jpeg)">
+                            <div class="textocard">
+                                <h3>Personalizados</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="row">
+                <div class="d-grid gap-3"><a
+                        href="http://api.whatsapp.com/send?phone=5491132940905&text=Hola%21%20Quisiera%20encargar%20un%20desayuno."
+                        target="_blank" rel="noopener noreferrer"></a>
+                    <button class="btncontact" type="button">Contactanos</button>
+                </div>
+            </div>
+        </section>
 
+        <section class="container-cardimg">
+            <div class="row">
+                <img src="./img/desayunos/desaprincipal.jpeg" class="img-fluid w-100 d-md-none" alt="desayuno">
+                <p class="textofin display-4 text-center w-auto">Las cajas de desayuno regalo más vendidas! <br> No te
+                    pierdas nuestras cajas
+                    de desayuno mas enviadas! <br> ¿cuál prefieres que te enviemos?</p>
+            </div>
+            <div class="row">
+                <img src="./img/desayunos/desaprincipal.jpeg" class="imgfin w-100 d-none d-sm-none d-md-block" alt="desayuno">
+                <p class="textofin display-4 text-center w-auto">Las cajas de desayuno regalo más vendidas! <br> No te
+                    pierdas nuestras cajas
+                    de desayuno mas enviadas! <br> ¿cuál prefieres que te enviemos?</p>
+            </div>
+        </section>
+
+
+        <div class="card">
+            <div class="card-body">
+                <p class="card-text p-1"><small class="text-muted p-1">Podes pagar de manera facil y segura!</small></p>
+            </div>
+            <img src="./img/mercadopago.jpg" class="card-img-top" alt="...">
+        </div>
     </main>
 
     <!----------------FOOTER------------------ -->
-    
-    <footer>
-        <div class="footerpetite">
-            <h2>Petite <br> Suprise</h2>
-            <ul>
-                <li> <a href="./pages/nosotros.html">Nosotros</a> </li>
-                <li><a href="./pages/desayunos.html">Desayunos</a></li>
-                <li><a href="./pages/preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-        </div>
 
-        <div class="footercontactanos">
-            <h2>Contactanos:</h2>
-            <div>
-                <label for="instagram">
-                <a href="https://www.instagram.com/petite_suprise/" target="_blank" id="instagram"><img src="./img/logos footer/logoinsta.png" alt="instagram" id="insta"></a></label>
+    <footer class="bg-footer">
+
+        <div class="footer container-fluid bg-navy position-relative bottom-0 end-0 ">
+            <div class="row border-bottom p-3">
+
+                <div class="dropdown col-6 col-lg-4 d-lg-none">
+                    <button class="btn btn-foot dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Petite Suprise
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="./index.html">Home</a></li>
+                        <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
+                        <li><a class="dropdown-item" href="./pages/desayunos.html">Desayunos</a></li>
+                        <li><a class="dropdown-item" href="./pages/preguntasfrecuentes.html">Preguntas
+                                frecuentes</a></li>
+                        <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+
+
+
+                <div class="footerpetite col-6 col-lg-4 text-light d-none d-sm-none d-md-none d-lg-block">
+                    <h2>Petite <br> Suprise</h2>
+                    <ul>
+                        <li><a href="./pages/nosotros.html">Nosotros</a> </li>
+                        <li><a href="./pages/desayunos.html">Desayunos</a></li>
+                        <li><a href="./pages/preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
+                        <li><a href="./pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <div class="footercontactanos col-6 col-lg-4 text-light text-center">
+                    <div class="footercontactanos col-6 col-lg-4 text-center p-2">
+                        <h2 class="text-center">Contactanos:</h2>
+                        <div class="d-flex justify-content-around fs-2">
+                            <a href="https://www.instagram.com/petite_suprise/" target="_blank"><i
+                                    class="bi bi-instagram"></i></a>
+                            <a
+                                href="http://api.whatsapp.com/send?phone=5491132940905&text=Hola%21%20Quisiera%20encargar%20un%20desayuno."><i
+                                    class="bi bi-whatsapp"></i></a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footersuscr col-12 col-lg-4 text-center">
+                    <H3 class="text-lg-center">Recibe nuestras Promociones:</H3>
+                    <label for="mail-sus">Tu Email:</label>
+                    <input type="mail" id="mail-sus" placeholder="tu-email@tu-email.com">
+                    <input type="submit" value="enviar" class="btn btn-new btn-sm">
+                </div>
+
             </div>
-
-            <div>
-                <label for="whatsapp">
-                <a href="https://web.whatsapp.com/send?phone=+5491132940905" target="_blank" id="whatsapp"> <img src="./img/logos footer/whatsappicono.png" alt="whatsapp" id="whatsapp"> </a></label>
+            <div class="text-center">
+                <span>Petite Suprise By Graciela Toro</span>
             </div>
-        </div>
-
-        <div class="footersuscr">
-            <H3>Suscribete y recibe nuestras Promociones:</H3>
-            <label for="mail-sus">Tu Email:</label>
-            <input type="mail" id="mail-sus" placeholder="tu-email@tu-email.com">
-            <input type="submit" value="enviar">
-        </div>
     </footer>
 
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
