--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,25 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
     <title>Petite Suprise - Contacto</title>
 </head>
 <!-- -------comienzo BODY-------- -->
 <body>
-    <header>
-        <div>
-            <img src="../img/logosinfondo.png" alt="Logo Petite Suprise" class="logopetite">
-            <H1>Petite <br> Suprise</H1>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=5491132940905&text=Hola%21%20Quisiera%20encargar%20un%20desayuno."
+        class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
+    <header class="navbar navbar-expand-lg">
+        <div class="container">
+            <img src="../img/logosinfondon.png" alt="Logopetitesuprise" class="logopetite">
+            <a class="navbar-brand" href="../index.html">Petite <br> Suprise</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/desayunos.html">Desayunos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../pages/contacto.html">Contactos</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li> <a href="../index.html">Home</a> </li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./desayunos.html">Desayunos</a></li>
-                <li><a href="./preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
-            </ul> 
-        </nav>
     </header>
     <!-- -----------Comienzo Main----------- -->
     <main>
@@ -56,37 +79,67 @@
 
     </main>
     <!-- -----------Comienzo Footer---------------- -->
-    <footer>
-        <div class="footerpetite">
-            <h2>Petite <br> Suprise</h2>
-            <ul>
-                <li> <a href="./nosotros.html">Nosotros</a> </li>
-                <li><a href="./desayunos.html">Desayunos</a></li>
-                <li><a href="./preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </div>
+    <footer class="bg-footer">
 
-        <div class="footercontactanos">
-            <h2>Contactanos:</h2>
-            <div>
-                <label for="instagram">
-                <a href="https://www.instagram.com/petite_suprise/" target="_blank" id="instagram"><img src="../img/logos footer/logoinsta.png" alt="instagram" id="insta"></a></label>
+        <div class="footer container-fluid bg-navy position-relative bottom-0 end-0 border-buttom">
+            <div class="row border-bottom p-3">
+
+                <div class="dropdown col-6 col-lg-4 d-lg-none">
+                    <button class="btn btn-foot dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Petite Suprise
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="../index.html">Home</a></li>
+                        <li><a class="dropdown-item" href="./nosotros.html">Nosotros</a></li>
+                        <li><a class="dropdown-item" href="./desayunos.html">Desayunos</a></li>
+                        <li><a class="dropdown-item" href="./preguntasfrecuentes.html">Preguntas
+                                frecuentes</a></li>
+                        <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+
+
+
+                <div class="footerpetite col-6 col-lg-4 text-light d-none d-sm-none d-md-none d-lg-block">
+                    <h2>Petite <br> Suprise</h2>
+                    <ul>
+                        <li><a href="../index.html">Home</a> </li>
+                        <li><a href="./nosotros.html">Nosotros</a> </li>
+                        <li><a href="./desayunos.html">Desayunos</a></li>
+                        <li><a href="./preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
+                        <li><a href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <div class="footercontactanos col-6 col-lg-4 text-light text-center">
+                    <div class="footercontactanos col-6 col-lg-4 text-center p-2">
+                        <h2 class="text-center">Contactanos:</h2>
+                        <div class="d-flex justify-content-around fs-2">
+                            <a href="https://www.instagram.com/petite_suprise/" target="_blank"><i
+                                    class="bi bi-instagram"></i></a>
+                            <a
+                                href="http://api.whatsapp.com/send?phone=5491132940905&text=Hola%21%20Quisiera%20encargar%20un%20desayuno."><i
+                                    class="bi bi-whatsapp"></i></a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footersuscr col-12 col-lg-4 text-center">
+                    <H3 class="text-lg-center">Recibe nuestras Promociones:</H3>
+                    <label for="mail-sus">Tu Email:</label>
+                    <input type="mail" id="mail-sus" placeholder="tu-email@tu-email.com">
+                    <input type="submit" value="enviar" class="btn btn-new btn-sm">
+                </div>
+
             </div>
-
-            <div>
-                <label for="whatsapp">
-                <a href="https://web.whatsapp.com/send?phone=+5491132940905" target="_blank" id="whatsapp"> <img src="../img/logos footer/whatsappicono.png" alt="whatsapp" id="whatsapp"> </a></label>
+            <div class="text-center">
+                <span>Petite Suprise By Graciela Toro</span>
             </div>
-        </div>
-
-        <div class="footersuscr">
-            <H3>Suscribete y recibe nuestras Promociones:</H3>
-            <label for="mail-sus">Tu Email:</label>
-            <input type="mail" id="mail-sus" placeholder="tu-email@tu-email.com">
-            <input type="submit" value="enviar">
-        </div>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 </body>
 
