--- a/pages/desayunos.html
+++ b/pages/desayunos.html
@@ -11,14 +11,10 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
     <title>Petite Suprise - Desayunos</title>
+    <link rel="icon" type="image/png" href="../img/iconopetite.ico">
 </head>
 
 <body>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://api.whatsapp.com/send?phone=5491132940905&text=Hola%21%20Quisiera%20encargar%20un%20desayuno."
-        class="float" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-    </a>
 
     <header class="navbar navbar-expand-lg">
         <div class="container">
@@ -67,7 +63,7 @@
     <!-- --------------comienzo footer---------------------- -->
     <footer class="bg-footer">
 
-        <div class="footer container-fluid bg-navy position-relative bottom-0 end-0 border-buttom">
+        <div class="footer container-fluid position-relative bottom-0 end-0 border-buttom">
             <div class="row border-bottom p-3">
 
                 <div class="dropdown col-6 col-lg-4 d-lg-none">
