--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,14 +11,11 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
     <title>Petite Suprise - Contacto</title>
+    <link rel="icon" type="image/png" href="../img/iconopetite.ico">
 </head>
 <!-- -------comienzo BODY-------- -->
-<body>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://api.whatsapp.com/send?phone=5491132940905&text=Hola%21%20Quisiera%20encargar%20un%20desayuno."
-        class="float" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-    </a>
+
+<body class="bodycontact">
     <header class="navbar navbar-expand-lg">
         <div class="container">
             <img src="../img/logosinfondon.png" alt="Logopetitesuprise" class="logopetite">
@@ -50,33 +47,64 @@
     </header>
     <!-- -----------Comienzo Main----------- -->
     <main>
-        <div><h1>Contacto</h1></div>
-        <form action="">
-            <div>
-                <label for="nombre-usuario">Nombre y apellido</label>
-                <input type="text" id="nombre-usuario" placeholder="Tu nombre y apellido">
-            </div>
-            <div>
-                <label for="mail-usuario">Tu Email</label>
-                <input type="email" placeholder="escribe-aqui@tuemail.com">
-            </div>
-            <div>
-                <label for="asunto-contacto">Asunto:</label>
-                <select name="" id="asunto-contacto">
-                    <option value="Solicitar desayuno sorpresa">Solicitar desayuno sorpresa</option>
-                    <option value="Solicitar desayuno personalizado">Solicitar desayuno personalizado</option>
-                    <option value="Otro">Otro</option>
-                </select>
-            </div>
-            <div>
-                <label for="mensaje-usuario">Ingrese su mensaje:</label>
-                <textarea name="" id="mensaje-usuario" cols="30" rows="10" placeholder="Ingrese aqui su mensaje..."></textarea>
-            </div>
-            <div>
-                <input type="submit" value="Enviar">
-            </div>
-        </form>
+        <div class="container">
+            <div class="row">
+                <div>
+                    <h1 class="tituloscontact text-center">Contacto</h1>
+                </div>
+                <div class="container1">
+                    <form action="">
+                        <h2>Escribenos</h2>
+                        <p>
+                            No dudes en escribirnos por cualquier consulta que tengas
+                        </p>
+                        <div>
 
+                            <label for="nombre">Escribe tu nombre</label>
+                            <input type="text" id="nombre" class="box">
+                        </div>
+
+                        <div>
+                            <label for="correo">Escribe tu correo</label>
+                            <input type="email" id="correo" class="box">
+                        </div>
+                        <div>
+                            <label for="mensaje">Escribe tu mensaje</label>
+                            <div>
+                            <textarea class="box" id="mensaje" cols="30" rows="10"></textarea></div>
+                        </div>
+                        <div>
+                            <input type="submit" value="enviar" class="submit">
+                        </div>
+                    </form>
+
+                    <div class="info">
+                        <img src="../img/imagesforms/info-1.svg" alt="info" class="img-1">
+
+                        <div class="location">
+                            <div class="icons">
+                                <img src="../img/imagesforms/gps.svg" alt="lugar">
+                                <p>San Miguel - Provincia de Buenos Aires</p>
+
+                            </div>
+
+                            <div class="icons">
+                                <img src="../img/imagesforms/number.svg" alt="Telefono">
+                                <p>+5491132940905</p>
+
+                            </div>
+
+                            <div class="icons">
+                                <a href="https://www.instagram.com/petite_suprise/" target="_blank"><img
+                                        src="../img/imagesforms/ins.svg" alt="instagram"> Instagram</a>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- -----------Comienzo Footer---------------- -->
     <footer class="bg-footer">
@@ -139,7 +167,9 @@
             </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 </body>
 
