--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,14 +11,11 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
     <title>Petite Suprise - Nosotros</title>
+    <link rel="icon" type="image/png" href="../img/iconopetite.ico">
 </head>
 
 <body>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://api.whatsapp.com/send?phone=5491132940905&text=Hola%21%20Quisiera%20encargar%20un%20desayuno."
-        class="float" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-    </a>
+
     <!-- --------------comienzo header---------------- -->
     <header class="navbar navbar-expand-lg">
         <div class="container">
@@ -51,10 +48,50 @@
     </header>
     <!-- ------------------comienzo MAIN--------------------- -->
     <main>
-        <div><h1>Nosotros</h1></div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut corporis repellat unde dolorum odit est cumque officia quam, doloremque nemo debitis delectus! Laudantium, corporis! Nobis ipsa atque ducimus placeat. Tempora.</p>
+        <section class="container">
+            <div class="row">
+                <h1 class="display-2 fw-bold text-center">Nosotros</h1>
+            </div>
+        </section>
+        <section class="container">
+            <div class="row">
+                <div class="row border border-5 rounded">
+                    <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
+                        <img src="../img/portada/imageneschicas/cajaejemplo.jpeg" alt="cajaejemplo" class="img-fluid">
+                    </div>
+                    <div class="col-12 col-md-6 order-md-first d-md-flex flex-md-column justify-content-md-center">
+                        <p> <strong>Petite Suprise</strong> surgió a partir de la pandemia del COVID-19, ya que muchas
+                            familias quedamos separadas por el confinamiento, por lo que creemos que los pequeños
+                            detalles pueden borrar esa distancia física que puede existir entre las personas y unir sus
+                            corazones..</p>
+                    </div>
+                </div>
+                <div class="row border border-5 rounded">
+                    <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
+                        <img src="../img/portada/imageneschicas/cajaejemplochico.jpeg" alt="cajaejemplochico" class="img-fluid">
+                    </div>
+                    <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
+                        <p>Somos una empresa dedicada a ayudarte a decir lo que sienten por tus personas favoritas, así como a acercarte a pesar de la distancia física que pueda existir entre ellas por medio de regalos que trascienden más allá de lo material, sino que transmiten el amor y cariño que sientes.</p>
+                    </div>
+                </div>
+                <div class="row border border-5 rounded">
+                    <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
+                        <img src="../img/portada/imageneschicas/variascajasejemplo.jpeg" alt="variascajasejemplo" class="img-fluid">
+                    </div>
+                    <div class="col-12 col-md-6 order-md-first d-md-flex flex-md-column justify-content-md-center">
+                        <p>Nos encanta poder ser tus cómplices en estrechar los lazos de amor y amistad con las personas que amas, por medio de esos pequeños detalles que iluminan su día y sacan una sonrisa en cualquier ocasión especial o en el momento más inesperado.
+                        Al enviar o recibir el regalo a domicilio te ahorrarás el tiempo de visitar muchas tiendas sin saber qué comprar.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
 
     </main>
+
+    <!-- -------------------comienzo del FOOTER----------------------------------- -->
     <footer class="bg-footer">
 
         <div class="footer container-fluid bg-navy position-relative bottom-0 end-0 border-buttom">
@@ -115,7 +152,10 @@
             </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
