--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -11,14 +11,11 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
     <title>Petite Suprise - Preguntas Frecuentes</title>
+    <link rel="icon" type="image/png" href="../img/iconopetite.ico">
 </head>
 
 <body>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://api.whatsapp.com/send?phone=5491132940905&text=Hola%21%20Quisiera%20encargar%20un%20desayuno."
-        class="float" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-    </a>
+
     <!-- --------------comienzo header---------------- -->
     <header class="navbar navbar-expand-lg">
         <div class="container">
@@ -60,7 +57,7 @@
         <section class="container">
             <div class="row border border-5 rounded">
                 <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
-                    <img src="../img/portada/logopetite.jpeg" alt="logopetite" class="img-fluid">
+                    <img src="../img/portada/imageneschicas/logopetite.jpeg" alt="logopetite" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
                     <h2 class="text-center">¿CÓMO PUEDO COMPRAR O ENCARGAR EL DESAYUNO?</h2>
@@ -77,7 +74,7 @@
             </div>
             <div class="row border border-5 rounded">
                 <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
-                    <img src="../img/portada/formadepago.jpeg" alt="formadepago" class="img-fluid">
+                    <img src="../img/portada/imageneschicas/formadepago.jpeg" alt="formadepago" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-6 order-md-first d-md-flex flex-md-column justify-content-md-center">
                     <h2>¿CUALES SON LAS FORMAS DE PAGO?</h2>
@@ -91,7 +88,7 @@
             </div>
             <div class="row border border-5 rounded">
                 <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
-                    <img src="../img/portada/horariodeatencion.jpeg" alt="horariodeatencion" class="img-fluid">
+                    <img src="../img/portada/imageneschicas/horariodeatencion.jpeg" alt="horariodeatencion" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
                     <h2>¿CUAL ES NUESTRO HORARIO DE ATENCION?</h2>
@@ -115,7 +112,7 @@
             </div>
             <div class="row border border-5 rounded">
                 <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
-                    <img src="../img/portada/personaliza.png" alt="personaliza" class="img-fluid">
+                    <img src="../img/portada/imageneschicas/personaliza.png" alt="personaliza" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-6 d-md-flex flex-md-column justify-content-md-center">
                     <h2>¿PUEDO AGREGAR UN MENSAJE PERSONALIZADO AL REGALO?</h2>
