--- a/index.html
+++ b/index.html
@@ -87,42 +87,42 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="1000">
-                        <img src="./img/desayunos/desayunoaniversario.jpg" class="d-block w-100" alt="Aniversarios">
+                        <img src="./img/carrusel/desayunoaniversario.jpg" class="d-block w-100" alt="Aniversarios">
                         <div class="carousel-caption">
                             <h5>Desayunos Aniversarios</h5>
                             <p>Sorprende a esa persona especial en su dia.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="./img/imgchicas/desayunocumple.jpg" class="d-block w-100" alt="cumpleaños">
+                        <img src="./img/carrusel/desayunocumple(1).jpg" class="d-block w-100" alt="cumpleaños">
                         <div class="carousel-caption">
                             <h5>Desayunos de cumpleaños</h5>
                             <p>El mejor regalo de cumpleaños <br>un buen desayuno.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="./img/imgchicas/desayunomadre.jpg" class="d-block w-100" alt="Mamá">
+                        <img src="./img/carrusel/desayunomadre.jpg" class="d-block w-100" alt="Mamá">
                         <div class="carousel-caption">
                             <h5>Para Mama</h5>
                             <p>Que la reina comience el dia con un buen <br><strong>desayuno</strong>.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
-                        <img src="./img/imgchicas/desayunopadre.jpg" class="d-block w-100" alt="Papá">
+                        <img src="./img/carrusel/desayunopadre.jpg" class="d-block w-100" alt="Papá">
                         <div class="carousel-caption">
                             <h5>Para papa</h5>
                             <p>Sorprende a ese heroe sin capa con <br> nuestros desayunos.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="5000">
-                        <img src="./img/imgchicas/desayunosaludable.jpg" class="d-block w-100" alt="Saludables">
+                        <img src="./img/carrusel/desayunosaludable.jpg" class="d-block w-100" alt="Saludables">
                         <div class="carousel-caption">
                             <h5>Desayunos Saludables</h5>
                             <p>Empieza el dia con toda la energia que necesitas.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="6000">
-                        <img src="./img/desayunos/desayunopersonalizado.jpeg" class="d-block w-100"
+                        <img src="./img/carrusel/desayunopersonalizado.jpeg" class="d-block w-100"
                             alt="Personalizados">
                         <div class="carousel-caption">
                             <h5>Personalizalo como quieras</h5>
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="7000">
-                        <img src="./img/desayunos/desayunomate.jpeg" class="d-block w-100 " alt="Mates">
+                        <img src="./img/carrusel/desayunomate.jpg" class="d-block w-100 " alt="Mates">
                         <div class="carousel-caption text-dark">
                             <h5>Desayuna con un Mate</h5>
                             <p>Regala un desayuno bien Argentino y personaliza el mate como quieras!.</p>
