--- a/pages/desayunos.html
+++ b/pages/desayunos.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tenemos gran variedad de desayunos incluso lo puedes personalizar como tu prefieras!! Lo que quieras para hacer feliz a esa persona especial!">
+    <meta name="description"
+        content="Tenemos gran variedad de desayunos incluso lo puedes personalizar como tu prefieras!! Lo que quieras para hacer feliz a esa persona especial!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -49,16 +50,35 @@
 
     <!-------Aqui comienza el main-----  -->
     <main>
-        <div class="titulodesayuno"><h1>Desayunos</h1></div>
-        <section class="contenedordesayuno">
-            <div class="descaja1"><h2>Aniversarios</h2></div>
-            <div class="descaja2"><h2>Cumpleaños</h2></div>
-            <div class="descaja3"><h2>Dia del Padre</h2></div>
-            <div class="descaja4"><h2>Dia de la madre</h2></div>
-            <div class="descaja5"><h2>Personalizados</h2></div>
-            <div class="descaja7"><h2>Saludable</h2></div>
-            <div class="descaja6"><h2>Mates</h2></div>
-
+        <div class="titulodesayuno">
+            <h1>Desayunos</h1>
+        </div>
+        <section class="contenainer">
+            <div class="row">
+                <div class="contenedordesayuno">
+                    <div class="descaja1">
+                        <h2 class="texto-des">Aniversarios</h2>
+                    </div>
+                    <div class="descaja2">
+                        <h2 class="texto-des">Cumpleaños</h2>
+                    </div>
+                    <div class="descaja3">
+                        <h2 class="texto-des">Dia del Padre</h2>
+                    </div>
+                    <div class="descaja4">
+                        <h2 class="texto-des">Dia de la madre</h2>
+                    </div>
+                    <div class="descaja5">
+                        <h2 class="texto-des">Personalizados</h2>
+                    </div>
+                    <div class="descaja7">
+                        <h2 class="texto-des">Saludable</h2>
+                    </div>
+                    <div class="descaja6">
+                        <h2 class="texto-des">Mates</h2>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- --------------comienzo footer---------------------- -->
@@ -122,7 +142,9 @@
             </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 </body>
 
